update to new LDLib recipe viewer changes which make us no longer use oh so many REI & EMI internals.